# RestAPI_example_DDD_UOW

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: c032eca8759a_init.py
src/: main.py
src/api/: __init__.py  exception_handlers.py  health.py
src/api/v1/: answers.py  deps.py  questions.py
src/core/: config.py  domain_exceptions.py  logging.py
src/db/: database.py  db_exceptions.py
src/db/models/: answer_model.py  question_model.py
src/db/repositories/: answers_rep.py  questions_rep.py
src/schemas/: __init__.py  answers_schema.py  question_schema.py
src/services/: answers_service.py  questions_service.py
src/utils/: repository.py  unitofwork.py
tests/: conftest.py  test_answers_api.py  test_health_api.py  test_questions_api.py  test_services.py
