[tool.ruff]
target-version = "py312"
line-length = 88

extend-exclude = ["migrations/*"]

[tool.ruff.format]
# опционально; можно убрать весь блок, если используешь Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# правила теперь лежат в блоке lint.*
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["tgbot"]
combine-as-imports = true
force-single-line = false

[project]
name = "fastapi-ddd"
version = "0.1.0"
description = ""
authors = [
    {name = "damnhandin",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.17.0,<2.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "fastapi (>=0.120.1,<0.121.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "environs (>=14.3.0,<15.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
