[project]
name = "fastapi-uow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.0",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncio==4.0.0",
    "asyncpg==0.30.0",
    "certifi==2025.10.5",
    "cfgv==3.4.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "distlib==0.4.0",
    "environs==14.3.0",
    "fastapi==0.120.1",
    "filelock==3.20.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "identify==2.6.15",
    "idna==3.11",
    "iniconfig==2.3.0",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "marshmallow==4.0.1",
    "nodeenv==1.9.1",
    "packaging==25.0",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "pre-commit==4.3.0",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.49.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
    "virtualenv==20.35.3",
]

[tool.ruff]
target-version = "py312"
line-length = 88

extend-exclude = ["migrations/*"]

[tool.ruff.format]
# опционально; можно убрать весь блок, если используешь Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# правила теперь лежат в блоке lint.*
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["."]
combine-as-imports = true
force-single-line = false
